bk_ida/gobmkida/c2/compute_eyes
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_eyes/src/engine/optics.c:1264:8: error: assigning to 'struct eyevalue' from incompatible type 'int'
*value = 0; 
       ^ ~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_eyes/src/engine/optics.c:1266:12: error: use of undeclared identifier 'eyevalue'
*value = ( eyevalue)16843009; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_eyes/src/engine/optics.c:1270:12: error: use of undeclared identifier 'eyevalue'
*value = ( eyevalue)33686018; 
           ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_eyes/src/obj/1/optics.o] Error 1
